tests/ui/issues/issue-23041.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-23041.rs:6:7
   |
LL |     b.downcast_ref::<fn(_)->_>();
   |       ^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the method `downcast_ref`
   |
help: consider specifying the generic argument
   |
LL |     b.downcast_ref::<fn(_) -> _>();
   |                   ~~~~~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
